Fix findbugs rule